cabal-version:       2.4
name:                dear-imgui-mosaic-nodecanvas.hs
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/o1lo01ol1o/dear-imgui-mosaic-nodecanvas.hs#dear-imgui-mosaic-nodecanvas.hs) for more details.
homepage:            https://github.com/o1lo01ol1o/dear-imgui-mosaic-nodecanvas.hs
bug-reports:         https://github.com/o1lo01ol1o/dear-imgui-mosaic-nodecanvas.hs/issues
license:             MIT
license-file:        LICENSE
author:              o1lo01ol1o
maintainer:          o1lo01ol1o <tim.pierson@gmail.com>
copyright:           2021 o1lo01ol1o
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/dear-imgui-mosaic-nodecanvas.hs.git

common common-options
  build-depends:       base ^>= 4.14.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     DearImguiMosaicNodecanvas.hs

executable dear-imgui-mosaic-nodecanvas.hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       dear-imgui-mosaic-nodecanvas.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
